--- a/colorGame.html
+++ b/colorGame.html
@@ -15,8 +15,8 @@
 	<div id="stripe">
 		<button id="reset">New Colors</button>
 		<span id="message"></span>
-		<button id="easyBtn">Easy</button>
-		<button id="hardBtn" class="selected">Hard</button>
+		<button class="mode">Easy</button>		<!-- id="easyBtn" -->
+ 		<button class="mode selected">Hard</button>		<!-- id="hardBtn" -->
 	</div>
 
 	<div id="container">
